--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.10",
     "prettier": "^3.8.1"
   },
